# otus

./: .gitignore
.github/workflows/: ci-03.yml  ci-04.yml  ci-06.yml  ci-07.yml  ci.yml  typing-02.yml
01/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  log_analyzer.py  pyproject.toml
01/.github/workflows/: ci.yml
01/src/log_analyzer/: __init__.py  analyzer.py  cli.py
01/tests/: conftest.py  test_analyzer.py
02/: Dockerfile  Makefile  README.md  docker-compose.yml  mypy.ini
02/tasks/: 01_any.py  02_dict.py  03_final.py  04_kwargs.py  05_list.py  06_optional.py  07_parameter.py  08_return.py  09_tuple.py  10_typealias.py  11_union.py  12_variable.py  13_await.py  14_callable.py  15_class_var.py  16_decorator.py  17_empty_tuple.py  18_generic.py  19_generic2.py  20_generic3.py  21_instance_var.py  22_literal.py  23_literal_string.py  24_self.py  25_typed-dict.py  26_typed-dict2.py  27_typed-dict3.py  28_unpack.py
03/: README.md
03/homework/: api.py  scoring.py  test.py
04/: README.md
04/homework/: api.py  scoring.py  store.py  test.py
05/: .coverage  .coveragerc  README.md
05/homework_warehouse_management/: .gitignore  dev_requirements.txt  main.py
05/homework_warehouse_management/domain/: models.py  repositories.py  services.py  unit_of_work.py
06/: README.md
06/homework/: httpd.py
07/: .dockerignore  .gitignore  Dockerfile  README.md  dev_requirements.txt  docker-compose.yml  docker-entrypoint.sh  requirements.txt  ruff.toml
07/config/: settings.py
07/polls/: tests.py  views.py
(+6 files in other folders)
