[tool.poetry]
name = "log-analyzer"
version = "0.1.0"
description = "Nginx log analyzer"
authors = ["otus-student"]
readme = "README.md"
packages = [{ include = "log_analyzer", from = "src" }]

[tool.poetry.dependencies]
python = "^3.13"
structlog = "^24.1.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.10.0"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
ruff = "^0.4.5"

[tool.poetry.scripts]
log-analyzer = "log_analyzer.cli:main"

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.13"
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true

[tool.ruff]
line-length = 88
target-version = "py313"
select = ["E", "F", "I", "W"]
